<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_2"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/concertone_regular"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/welcome"
        android:textColor="@color/LavenderPurple"
        android:textIsSelectable="false"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--Play Button-->
    <Button
        android:id="@+id/playBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/menu_rounded_button"
        android:fontFamily="@font/overlock_bold"
        android:gravity="center"
        android:text="@string/play_game"
        android:textColor="@color/SkyBlue"
        android:textSize="24sp" />

    <!--How to Play Button-->
    <Button
        android:id="@+id/howToPlayBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/menu_rounded_button"
        android:fontFamily="@font/overlock_bold"
        android:text="@string/how_to_play"
        android:textColor="@color/BubblegumPink"
        android:textSize="24sp"
        tools:ignore="MissingConstraints" />

    <!--Exit Button-->
    <Button
        android:id="@+id/exitBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/menu_rounded_button"
        android:fontFamily="@font/overlock_bold"
        android:gravity="center"
        android:text="@string/exit_game"
        android:textColor="@color/PastelGreen"
        android:textSize="24sp" />

</LinearLayout>
