<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_5"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".OrderNumbers">

    <TextView
        android:id="@+id/orderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/concertone_regular"
        android:text="Arrange Numbers"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/instructionTextView2"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/order_text_button"
        android:fontFamily="@font/overlock_bold"
        android:padding="20dp"
        android:text="Please arrange the numbers from smallest to biggest."
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/numbersLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/concertone_regular"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/answerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/concertone_regular"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/checkAnswerButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_answer"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/action_button"
        android:fontFamily="@font/overlock_bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:onClick="onCheckAnswerClick3"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/nextQuestionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/action_button"
        android:fontFamily="@font/overlock_bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:onClick="onNextClick3"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/exitButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_game_mode"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@drawable/action_button"
        android:fontFamily="@font/overlock_bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:onClick="onExitClick3"
        android:layout_marginTop="25dp"/>
</LinearLayout>