<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_3"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".CompareNumbers">

    <TextView
        android:id="@+id/compareTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comparing Numbers"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/concertone_regular"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Which number is bigger?"
        android:textSize="24sp"
        android:padding="20dp"
        android:background="@drawable/compare_text_button"
        android:fontFamily="@font/overlock_bold"
        android:textColor="@color/black"
        android:layout_marginTop="36dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/numberButton1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:text="Number 1"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/compare_selection_button"
            android:fontFamily="@font/concertone_regular"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:onClick="onNumberButtonClick"/>

        <Button
            android:id="@+id/numberButton2"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:text="Number 2"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/compare_selection_button"
            android:fontFamily="@font/concertone_regular"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:onClick="onNumberButtonClick"/>
    </LinearLayout>

    <Button
        android:id="@+id/checkAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_answer"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/action_button"
        android:fontFamily="@font/overlock_bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:onClick="onCheckAnswerClick"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/nextQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/action_button"
        android:fontFamily="@font/overlock_bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:onClick="onNextClick"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_game_mode"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@drawable/action_button"
        android:fontFamily="@font/overlock_bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:onClick="onExitClick"
        android:layout_marginTop="100dp"/>
</LinearLayout>