<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_4"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".ComposeNumbers">

    <TextView
        android:id="@+id/composeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/concertone_regular"
        android:text="Composing Numbers"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/compose_text_button"
        android:fontFamily="@font/overlock_bold"
        android:padding="20dp"
        android:text="Please enter 2 suitable numbers that make up the given number."
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/givenNumberTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/compose_text_button"
        android:fontFamily="@font/concertone_regular"
        android:padding="10dp"
        android:text="123"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/firstNumberEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@drawable/compose_display_button"
            android:padding="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/overlock_bold"
            android:hint="First Number"
            android:textAlignment="center"
            android:layout_marginBottom="0dp"/>

        <TextView
            android:id="@+id/equationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+/-"
            android:padding="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="0dp"/>

        <EditText
            android:id="@+id/secondNumberEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@drawable/compose_display_button"
            android:padding="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/overlock_bold"
            android:textAlignment="center"
            android:hint="Second Number"
            android:layout_marginBottom="0dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/checkAnswerButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_answer"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/action_button"
        android:fontFamily="@font/overlock_bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:onClick="onCheckAnswerClick2"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/nextQuestionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/action_button"
        android:fontFamily="@font/overlock_bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:onClick="onNextClick2"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/exitButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_game_mode"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@drawable/action_button"
        android:fontFamily="@font/overlock_bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:onClick="onExitClick2"
        android:layout_marginTop="25dp"/>
</LinearLayout>